--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -59,7 +59,6 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
 }
 
 .card {
@@ -72,6 +71,7 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 350px;
+  min-height: 400px;
 }
 
 .card:hover,
